# rust-backend

./: .env.example  .gitignore  Cargo.toml  README.md  log4rs.yaml
migrations/: 0001_users_scores_table.sql  0001_users_table.sql  0002_add_tokens_table.sql  0002_users_table.sql  0003_add_friends_table.sql  0003_scores_table.sql  0004_add_achievements_table.sql  0004_more_timestamps.sql  0005_users_invalidate_tokens.sql
src/: errors.rs  main.rs  main.rs.save  models.rs  structs.rs  utils.rs
src/html/: 404.html  create_achievement_form.html
src/models/: achievements.rs  add_DOB.rs  add_date_of_birth.rs  delete_account.rs  friend_managment.rs  leaderboard.rs  signin.rs  signout.rs  signup.rs  test_token.rs  update_account_data.rs  update_date_of_birth.rs  update_password.rs  upload_score.rs  user_account_info.rs  user_account_profile.rs  web_leaderboard.rs
src/models/_old_routes/: mod.rs  old_leaderboard.rs
src/models/account_managment/: delete_account.rs  mod.rs  signin.rs  signout.rs  signup.rs  test_token.rs  update_account_data.rs
src/models/leaderboard/: _LEADERBORD_ROUTES.MD  leaderboard.rs  mod.rs  number_of_records.rs  upload_score.rs  user_position.rs
src/models/profile_managment/: achievements.rs  friend_managment.rs  mod.rs  user_account_profile.rs
src/models/scores/: WEB_ROUTES.MD  leaderboard_web.rs  mod.rs  user_position.rs
src/models/utilities/: check_user.rs  check_user_exists.rs  mod.rs
src/models/web_api/: leaderboard_web.rs  web_api.MD
src/models/web_routes/: leaderboard_web.rs
